<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.app.worktrackerapp.activity.registration.RegistrationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="100dp">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding = "10dp"
        android:id="@+id/editText_first_name"
        android:hint="@string/REGISTRATION_FIRSTNAME_PLACEHOLDER"
        android:background = "@color/textbox_background"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding = "10dp"
        android:id="@+id/editText_last_name"
        android:hint="@string/REGISTRATION_LASTNAME_PLACEHOLDER"
        android:background = "@color/textbox_background"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding = "10dp"
        android:id="@+id/editText_mobileno"
        android:hint="@string/REGISTRATION_MOBILENO_PLACEHOLDER"
        android:background = "@color/textbox_background"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding = "10dp"
        android:id="@+id/editText_email"
        android:hint="@string/REGISTRATION_EMAIL_PLACEHOLDER"
        android:background = "@color/textbox_background"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding = "10dp"
        android:id="@+id/editText_password"
        android:hint="@string/REGISTRATION_PASSWORD_PLACEHOLDER"
        android:background = "@color/textbox_background"/>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding = "10dp"
        android:id="@+id/editText_retype_password"
        android:hint="@string/REGISTRATION_REENTER_PASSWORD_PLACEHOLDER"
        android:background = "@color/textbox_background"/>


    <Button
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:text="@string/REGISTRATION_SUBMIT_BUTTON"
        android:textSize="15dp"
        android:padding = "10dp"
        android:layout_marginTop = "30dp"
        android:background="@color/form_button_background"
        android:id = "@+id/button_registration_submit"/>


    </LinearLayout>

</RelativeLayout>
